// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HideCharsToggle renders basic component unchanged 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<body>
    <div>
      <div
        class="c0"
        data-is-visible="false"
      >
        <div
          class="c1"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<div>
    <div
      class="c0"
      data-is-visible="false"
    >
      <div
        class="c1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HideCharsToggle renders start visible option unchanged 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<body>
    <div>
      <div
        class="c0"
        data-is-visible="true"
      >
        <div
          class="c1"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<div>
    <div
      class="c0"
      data-is-visible="true"
    >
      <div
        class="c1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HideCharsToggle renders start visible option unchanged 2`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<body>
    <div>
      <div
        class="c0 className"
        data-is-visible="false"
      >
        <div
          class="c1"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  cursor: pointer;
  outline: 0 none;
  border: 1px solid currentColor;
  border-radius: 4px;
}

.c1 {
  display: block;
  height: 25px;
  width: 25px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

[data-is-visible="true"] .c1 {
  background-image: url(/img.jpg);
}

[data-is-visible="false"] .c1 {
  background-image: url(/img.jpg);
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="true"] .c1 {
    background-image: url(/img.jpg);
  }
}

@media (prefers-color-scheme: dark) {
  [data-is-visible="false"] .c1 {
    background-image: url(/img.jpg);
  }
}

<div>
    <div
      class="c0 className"
      data-is-visible="false"
    >
      <div
        class="c1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
